# pravidhi

./: .gitignore  README.md  pravidhi.yaml  pyproject.toml
cron/: scheduler.py
cyber/: __init__.py
cyber/agent/: core.py
cyber/cli/: commands.py
engine/: __init__.py  bounty.py  config.py  context_window.py  google_labs_tools.py  latest_tech.py  pipeline.py  provider_discovery.py  provider_router.py  publisher.py  registry.py  reverse_engineering.py  sandbox.py  ultraworker.py  validator.py
gateway/: api_server.py  cli.py  doctor.py
gateway/chat/: __init__.py  manager.py  routes.py  trace_engine.py
gateway/chat/static/: index.html
gateway/control_ui/: __init__.py  dashboard.py
memory/: session.py
research/: training_loop.py
router_agent/: __init__.py  core.py
scripts/: deploy.sh  install.sh
skills/reverse-engineering/: SKILL.md
tests/: test_all.py
